--- a/style.css
+++ b/style.css
@@ -107,3 +107,56 @@ button{
     padding-bottom:2rem;
     background:linear-gradient(yellow,purple);
 }
+@media (max-width:488px){
+.container{
+    margin-left:2rem;
+    height:30rem;
+    width:20rem;
+}
+p{
+font-size:small;
+font-weight:bold;
+}
+input{
+    padding-left:0.5em;
+    padding-right:0.1em;
+    margin-left:2rem;
+}
+#verify-btn{
+    margin-left:6rem;
+    padding-left:3rem;
+    padding-right:3rem;
+}
+#refresh-btn{
+    margin-left:5.7rem;
+    padding:1rem;
+}
+#captcha{
+    font-size:medium;
+}
+::placeholder{
+    font-size:medium;
+}
+#verify-btn:hover{
+    margin-left:5.2rem;
+    padding-right:4rem;
+    padding-left:4rem;
+    margin-top:1.5rem;
+    padding-top:1rem;
+    padding-bottom:1rem;
+}
+h1{
+    margin-top:1rem;
+}
+#refresh-btn:hover{
+    margin-top:1rem;
+    margin-left:5rem;
+padding-top:1rem;
+padding-bottom:1rem;
+padding-left:2rem;
+padding-right:2rem;
+}
+#result{
+    margin-top:-1rem;
+}
+}
